--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  height: 100%;
+  background: linear-gradient(to bottom, white, black);
 }
 
 code {
@@ -12,7 +16,10 @@ code {
     monospace;
 }
 
-.gradient {
-  background: linear-gradient(to bottom, white, black);
-  height: 100vh;
+.full{
+  height: auto !important;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
