--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ body {
 
   height: 100%;
   background: linear-gradient(to bottom, white, black);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 code {
