--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -13,6 +13,7 @@
     width: 50px;
     padding: 50px;
     margin: auto;
+    outline: none;
 }
 
 .arrow-1{
@@ -24,8 +25,9 @@
 }
 
 .pageIndicatorContainer {
+  margin: auto 25px auto 25px;
+  padding-bottom: 50px;
   text-align: center;
-  flex-shrink: 0;
 }
 
 .pageIndicator {
@@ -35,6 +37,7 @@
   border-radius: 50%;
   display: inline-block;
   margin: 5px;
+  cursor: pointer;
 }
 
 .pageIndicatorActive {
@@ -44,7 +47,7 @@
   border: 2px solid black;
   border-radius: 50%;
   display: inline-block;
-  margin: 5px;
+  margin: 4px;
 }
 
 @media screen and (min-width: 1250px) {
@@ -76,5 +79,9 @@
   }
   .arrow-2 {
     order: 4;
+  }
+  .arrowImage{
+      padding: 0 0 50px 0; 
+      margin: auto;
   }
 }
