--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -84,4 +84,18 @@
       padding: 0 0 50px 0; 
       margin: auto;
   }
+  .title{
+      font-size: 30px
+  }
+  .pageIndicator {
+    height: 12px;
+    width: 12px;
+  }
+  
+  .pageIndicatorActive {
+    height: 10px;
+    width: 10px;
+    background-color: white;
+    border: 2px solid black;
+  }
 }
