--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   height: 100%;
-  background: linear-gradient(to bottom, white, black);
+  background: linear-gradient(to bottom, white, gray);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
