home page added

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -42,6 +42,11 @@
     margin-bottom: 30px;
 }
 
+.linkedin {
+  width: 45px;
+  margin-bottom: 30px;
+}
+
 .form {
   align-items: center;
   margin-left: auto;
