--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -1,6 +1,6 @@
 .card{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0px;
     max-width: 900px;
     width: 90vw;
 }
@@ -18,4 +18,5 @@
 
 .description{
     font-size: 20px;
+    display: inline-block;
 }
