--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,7 +8,6 @@
 .homeWordsContainer {
     justify-content: left;
     margin-left: 80px;
-    z-index: 1;
 }
 
 .homeName {
@@ -34,8 +33,34 @@
 }
 
 .homeProfile {
-    width: 800px;
+    width: 750px;
     opacity: 0.5;
     border-radius: 50%;
     margin: 25px;
+}
+
+@media screen and (max-width: 1250px) {
+    .homeProfileContainer {
+        display: none;
+    }
+
+    .homeWordsContainer {
+        justify-content: center;
+        text-align: center;
+        margin: auto;
+    }
+
+    .homeName {
+        font-size: 50px;
+        margin-top: 40px;
+    }
+    
+    .homeDegree {
+        font-size: 30px;
+        margin-top: 20px;
+    }
+    
+    .homeTitles {
+        font-size: 20px;
+    }
 }
