--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -17,11 +17,11 @@
 }
 
 .arrow-1{
-    display: flex;
+    padding-top: 175px;
 }
 
 .arrow-2{
-    display: flex;
+    padding-top: 175px;
 }
 
 .pageIndicatorContainer {
@@ -72,13 +72,15 @@
     width: 100%;
   }
   .arrow-1 {
-    order: 2;
+    order: 2;    
+    padding-top: 0px;
   }
   .pageIndicatorContainer {
     order: 3;
   }
   .arrow-2 {
     order: 4;
+    padding-top: 0px;
   }
   .arrowImage{
       padding: 0 0 50px 0; 
